--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-node_modules
+# Ignore environment variables
+.env
+
+# Ignore node modules
+node_modules/
+Backend/node_modules/
+dashboard/node_modules/
+frontend/node_modules/
